--- a/index.html
+++ b/index.html
@@ -2,11 +2,85 @@
 <html>
 <head>
   <title>My First Node App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
   <script src="/socket.io/socket.io.js"></script>
+
+  <style>
+  body {
+  background-color: #f1f1f1;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #333;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.jumbotron {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 80px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  width: 95%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.form-control {
+  border: none;
+  border-radius: 30px;
+  box-shadow: none;
+  background-color: #f2f2f2;
+  font-size: 1.2rem;
+  padding: 15px 20px;
+}
+
+.form-control:focus {
+  box-shadow: none;
+  background-color: #f9f9f9;
+}
+
+::placeholder {
+  color: #bbb;
+  font-size: 14px;
+}
+
+#send {
+  background-color: #28a745;
+  border-color: #28a745;
+  border-radius: 30px;
+  padding: 12px 40px;
+}
+
+#send:hover {
+  background-color: #218838;
+  border-color: #1e7e34;
+}
+
+#messages {
+  background-color: #fff;
+  padding: 20px;
+  margin-top: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+#messages h4,
+#messages p {
+  color: #555;
+  font-size: 14px;
+  line-height: 1.5;
+}
+
+
+</style>
 </head>
 <body>
 <div class="container">
