--- a/chat.html
+++ b/chat.html
@@ -122,7 +122,7 @@
     socket.on('message', addMessages)
 
     function addMessages(message){
-        const date = new Date(message.sent_at).toLocaleString(); // convert to a human-readable date
+        const date = new Date(message.sent_at).toLocaleString(); 
         $("#messages").prepend(`<div class="message"> <h4> <b>${message.name}</b> </h4> <p> ${message.message} </p> <p class="text-muted">${date}</p> </div> <hr>`);
     }
 
